# melo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  config.dev.toml  config.example.toml  lint-staged.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
docs/superpowers/plans/: 2026-04-09-melo-phase-1.md  2026-04-10-melo-global-cli-dev-workflow.md  2026-04-10-melo-phase-1-rebaseline.md  2026-04-10-melo-playback-auto-advance.md  2026-04-10-melo-playback-progress-sync.md  2026-04-10-melo-playback-queue-stability.md  2026-04-10-melo-playback-session-recovery.md  2026-04-10-melo-playback-volume-and-modes.md  2026-04-11-melo-api-docs-and-response-envelope.md  2026-04-11-melo-daemon-management-surface.md  2026-04-11-melo-daemon-registration-mpv-and-tui-help.md  2026-04-11-melo-direct-open-and-ephemeral-playlists.md  2026-04-12-database-bootstrap-on-daemon-start.md  2026-04-12-melo-daemon-cli-observability-and-docs-access.md  2026-04-12-melo-direct-open-background-scan-and-runtime-templates.md  2026-04-12-melo-playlist-view-and-current-play-context.md  2026-04-12-melo-startup-verbose-and-unified-logging.md  2026-04-12-melo-tui-usability-and-launch-semantics.md  2026-04-13-melo-libmpv-default-auto-fallback-phase-2.md  2026-04-13-melo-mpv-ipc-client-mode-phase-1.md  2026-04-14-melo-tui-dual-mode-playback-and-usability.md  2026-04-14-melo-tui-playback-usability-fixes.md
docs/superpowers/specs/: 2026-04-09-melo-design.md  2026-04-10-melo-global-cli-dev-workflow-design.md  2026-04-10-melo-playback-auto-advance-design.md  2026-04-10-melo-playback-progress-sync-design.md  2026-04-10-melo-playback-queue-stability-design.md  2026-04-10-melo-playback-session-recovery-design.md  2026-04-10-melo-playback-volume-and-modes-design.md  2026-04-11-melo-api-docs-and-response-envelope-design.md  2026-04-11-melo-daemon-management-surface-design.md  2026-04-11-melo-daemon-registration-formats-and-tui-help-design.md  2026-04-11-melo-dev-install-daemon-stop-design.md  2026-04-11-melo-direct-open-and-ephemeral-playlists-design.md  2026-04-11-melo-help-i18n-design.md  2026-04-12-database-bootstrap-on-daemon-start-design.md  2026-04-12-melo-daemon-cli-observability-and-docs-access-design.md  2026-04-12-melo-direct-open-background-scan-and-runtime-templates-design.md  2026-04-12-melo-playlist-view-and-current-play-context-design.md  2026-04-12-melo-startup-verbose-and-unified-logging-design.md  2026-04-12-melo-tui-usability-and-launch-semantics-design.md  2026-04-13-melo-libmpv-default-auto-fallback-design.md  2026-04-13-melo-mpv-client-mode-and-libmpv-design.md  2026-04-14-melo-tui-dual-mode-playback-and-usability-design.md  2026-04-14-melo-tui-playback-usability-fixes-design.md
scripts/: __init__.py  beets_to_melo.py
scripts/api-docs/: check-openapi.cjs
scripts/dev-cli/: install-dev.cjs  link-dev.cjs
scripts/tests/: test_beets_to_melo.py
src/: lib.rs  main.rs  test_support.rs
src/api/: bootstrap.rs  docs.rs  error.rs  mod.rs  open.rs  player.rs  playlist.rs  queue.rs  response.rs  source.rs  system.rs  track.rs  tui.rs  ws.rs
src/cli/: args.rs  client.rs  daemon.rs  dispatch.rs  global_flags.rs  launch.rs  mod.rs  observe.rs  run.rs
src/cli/daemon/: tests.rs
src/cli/dispatch/: tests.rs
src/cli/global_flags/: tests.rs
src/cli/launch/: tests.rs
src/cli/observe/: tests.rs
src/cli/run/: tests.rs
src/core/: error.rs  logging.rs  mod.rs  runtime_templates.rs
src/core/config/: paths.rs  settings.rs
src/core/config/paths/: tests.rs
src/core/db/: bootstrap.rs  connection.rs  maintenance.rs  migrator.rs  mod.rs
src/core/db/entities/: albums.rs  artists.rs  artwork_refs.rs  mod.rs  player_session_items.rs  player_sessions.rs  playlist_entries.rs  playlists.rs  songs.rs
src/core/db/migrations/: m20260410_000001_initial.rs  m20260410_000002_player_session.rs  m20260411_000003_ephemeral_playlists.rs  mod.rs
src/core/logging/: tests.rs
src/core/model/: mod.rs  playback_mode.rs  playback_runtime.rs  player.rs  runtime_task.rs  track_content.rs  tui.rs
src/core/model/playback_mode/: tests.rs
src/core/model/track_content/: tests.rs
src/core/runtime_templates/: tests.rs
src/daemon/: app.rs  manager.rs  mod.rs  observe.rs  playback_context.rs  process.rs  registry.rs  server.rs  tasks.rs
src/daemon/app/: tests.rs
src/daemon/manager/: tests.rs
src/daemon/observe/: tests.rs
src/daemon/playback_context/: tests.rs
src/daemon/process/: tests.rs
src/daemon/registry/: tests.rs
src/daemon/tasks/: tests.rs
src/domain/: mod.rs
src/domain/open/: background_scan.rs  formats.rs  mod.rs  service.rs
src/domain/player/: backend.rs  factory.rs  libmpv_backend.rs  mod.rs  mpv_backend.rs  navigation.rs  queue.rs  resolver.rs  rodio_backend.rs  runtime.rs  service.rs  session_store.rs
src/domain/playlist/: mod.rs  query.rs  repository.rs  service.rs
src/tui/: app.rs  client.rs  cover.rs  event.rs  keymap.rs  lyrics.rs  mod.rs  mouse.rs  playback_clock.rs  run.rs  theme.rs  viewports.rs  ws_client.rs
src/tui/app/: tests.rs
src/tui/cover/: tests.rs
src/tui/keymap/: tests.rs
src/tui/lyrics/: tests.rs
src/tui/mouse/: tests.rs
src/tui/playback_clock/: tests.rs
src/tui/run/: tests.rs
src/tui/ui/: content.rs  details.rs  layout.rs  mod.rs  playbar.rs  playlist.rs  popup.rs  sidebar.rs
src/tui/viewports/: tests.rs
tests/: api_server.rs  cli_help.rs  cli_remote.rs  config_loading.rs  db_bootstrap.rs  direct_open_background_scan.rs  ephemeral_playlists.rs  library_scan.rs  library_search.rs  lofty_reader.rs  open_api.rs  organize_rules.rs  player_service.rs  player_session_recovery.rs  playlist_service.rs  seaorm_repository.rs  tui_app.rs  tui_home.rs
tests/dev-cli/: install-dev.test.mjs  install-dev.test.mts  install-dev.test.ts  link-dev.test.mjs  link-dev.test.ts  melo-dev-wrapper.test.mjs  melo-dev-wrapper.test.ts  package-json.test.mjs  package-json.test.mts  package-json.test.ts
(+13 files in other folders)
