[package]
name = "melo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.6.0", features = ["derive"] }
config = { version = "0.15.22", default-features = false, features = ["toml"] }
inquire = { version = "0.9.4", default-features = false, features = ["crossterm", "fuzzy", "macros", "one-liners"] }
lofty = "0.23.3"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
rodio = { version = "0.22.2", default-features = false, features = ["flac", "mp3", "playback", "vorbis", "wav"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
sea-orm = { version = "1.1.20", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "with-json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.0"
tempfile = "3.23.0"
thiserror = "2.0.11"
tokio = { version = "1.51.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
walkdir = "2.5.0"

[profile.dev]
debug = true
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 1

[patch.crates-io]
lofty = { git = "https://github.com/mudssky/lofty-rs", branch = "myfix" }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
