[package]
name = "melo"
version = "0.1.0"
edition = "2024"

[dependencies]
# 当前实现已接入
axum = { version = "0.8.8", features = ["ws"] }
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.6.0", features = ["derive"] }
config = { version = "0.15.22", default-features = false, features = ["toml"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.32"
minijinja = "2.19.0"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"
sysinfo = "0.38.4"
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tokio = { version = "1.51.1", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "test-util",
    "time",
] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
walkdir = "2.5.0"

# 按设计将逐步接入
inquire = { version = "0.9.4", default-features = false, features = [
    "crossterm",
    "fuzzy",
    "macros",
    "one-liners",
] }
lofty = "0.23.3"
mime_guess = "2.0.5"
ratatui = { version = "0.30.0", default-features = false, features = [
    "crossterm",
] }
rodio = { version = "0.22.2", default-features = false, features = [
    "flac",
    "mp3",
    "playback",
    "vorbis",
    "wav",
] }
sea-orm = { version = "1.1.20", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "with-json",
] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
unicode-width = "0.2.2"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[profile.dev]
debug = true
incremental = true
codegen-units = 256

[profile.dev.package."*"]
# dev 引入第三方库开启优化，因为库一般编译一次多次使用节省时间
opt-level = 1

[patch.crates-io]
lofty = { git = "https://github.com/mudssky/lofty-rs", branch = "myfix" }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tower = { version = "0.5.3", features = ["util"] }
